# study-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  pyrightconfig.json
src/: app.py  create_exe.bat
src/components/: clock.py  dropdown.py  graphs.py  main_window.py  sidebar.py
src/pages/: home_page.py  statistics_page.py  study_page.py
src/styles/: colors.py  style.py
src/util/: constants.py  schemas.py  util.py
