[project]
name = "study-tracker"
version = "0.1.0"
description = "A study tracking tool"
dependencies = [
    "polars>=1.29.0",
    "pyinstaller>=6.13.0",
    "pyside6>=6.9.0",
]

requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312" 

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

